# c-meson-cargo

./: AUTHORS  NEWS.md  README.md  meson.build
.github/workflows/: ci.yml
cargo-config/.cargo/: config.toml.in  meson.build
src/: build.sh  dist.sh  vendor.sh
test/basic/: Cargo.toml  lib.rs  meson.build  testlib.c
